Fix off-center PCS logo at 62em breakpoint

--- a/assets/less/pcs-custom.less
+++ b/assets/less/pcs-custom.less
@@ -123,6 +123,12 @@ section.resources {
   }
 }
 
-.article-author-side .bio-photo {
-  max-width: 100% !important;
+.article-author-side {
+  .bio-photo {
+    max-width: 100% !important;
+  }
+  h3 {
+    margin: auto !important;
+  }
 }
+
